# ChangeLog

## Revision: Nova Mechanicus

## Overview:
Reworked the Mod
Deprecated all "classic"/old system content
Redesigned the progression tree
Added the MPL license for all C# code

### General Changes
- Redesigned the foundations of the mod
- Remade the Mechadendrite Slot 
- Lowered the amount of Mechadendrite Slots to 4 instead of 6
- Added in a new Basic General Mechadendrite to replace the old Basic
Mechadendrite
- Marked all old research and research tab as deprecated
- Moved all old files into Classic Folder
- Moved all new files into Nova Folder
- Added Mod Settings Page (Experimental)
- Added in a new template file
- Removed 1.5 support (Sorry but maintaining 1.5 would be too much effort)
- Removed old mechadendrite slots. You may have to reinstall mechadendrites
that were on old slots but otherwise nothing should break.
- Added new Research Projects for Basic, Standard, High, and Ultra tier
Mechanical Mechadendrites
- Added a Log Message to notify the user that the mod has been loaded
- Added a Log Warning to notify the user that they are on the Nova branch
which is experimental and may have issues

### Fixes
- Deleted base mechadendrite xml file