@@ -1,10 +1,0 @@
-<?xml version="1.0" encoding="utf-8" ?>
-
-<Defs>
-    <BodyPartGroupDef>
-        <defName>Marak_Mechadendrites</defName>
-        <label>mechadendrites</label>
-        <listOrder>85</listOrder>
-    </BodyPartGroupDef>
-</Defs>
-
